Fixed the border issues in dark mode

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 .dark__mode {
   --black: #fff;
   --white: #000;
+  --borders: 2px solid var(--black);
 }
 html {
   scroll-behavior: smooth;
